@@ -2,7 +2,7 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = libqalculate src data man po po-defs docs
+SUBDIRS = data libqalculate src man po po-defs docs
 
 EXTRA_DIST = config.rpath  \
 	autogen.sh \
